k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hk-fintech-ingress
  namespace: hk-fintech
  labels:
    app.kubernetes.io/part-of: hk-fintech-hk-fintech
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-service
                port:
                  number: 9090

          - path: /api/v1/wallets(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wallet-service
                port:
                  number: 9091

          - path: /api/v1/cards(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: card-service
                port:
                  number: 9092

          - path: /api/v1/payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 9093

          - path: /api/v1/invoices(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invoice-service
                port:
                  number: 9094
